Update dashboard and parts of exercise 01

--- a/docs/01_deploy_app_resources/0102.md
+++ b/docs/01_deploy_app_resources/0102.md
@@ -1,70 +1,61 @@
 ---
-title: '2. Deploy supporting Azure services'
+title: '2. Query data from Azure AI Search'
 layout: default
-nav_order: 2
+nav_order: 1
 parent: 'Exercise 01: Deploy application resources'
 ---
 
-# Task 02 - Deploy supporting Azure services (20 minutes)
+# Task 02 - Query data from Azure AI Search (20 minutes)
 
 ## Introduction
 
-Contoso Suites has asked you to perform a proof of concept for using Azure OpenAI and Azure AI Services to improve the productivity of their support staff. In this second task, you will deploy a set of common Azure services, including Azure Cosmos DB, a storage account, and an Azure AI Search service, to an appropriate region.
-
-{: .note }
-> You will work with the GPT-4 model in this training. This will limit the number of regions you can use for deployment. Review the [region availability table](https://learn.microsoft.com/azure/ai-services/openai/concepts/models#model-summary-table-and-region-availability) and ensure that you choose a region that supports GPT-4. Also, you will want to ensure that your region has [support for Azure AI Services](https://azure.microsoft.com/en-us/explore/global-infrastructure/products-by-region/?products=cognitive-services)
+The ChatGPT series of models available in Azure OpenAI has been trained on a wide variety of datasets online, but these datasets tend to be publicly available. For private and proprietary datasets, we will need a different approach than to expect ChatGPT has the available information. In this second task of the exercise, we will push data into an Azure storage account and convert it into an Azure AI Search index.
 
 ## Description
 
-In this task, you will prepare a resource group with three Azure services.
+In this task, you will load data that Contoso Suites staff has provided to you into Azure Blob Storage. This data contains a summary, in JSON format, of several of their resort properties and hotels located on the resorts. This is an example of the type of data the company would like to use to enhance chat results, so they would like you to incorporate this data into the Azure OpenAI proof of concept. You may find these files in [the src/data folder](https://github.com/microsoft/TechExcel-Integrating-Azure-PaaS-and-AI-Services-for-AI-Design-Wins/tree/main/src/data) for the repository.
 
 The key tasks are as follows:
 
-1. Create a new resource group in your subscription. This subscription **must** have access to Azure OpenAI and you should deploy the resource group to a region that supports GPT-4.
-2. Use the `DeployAzureResources.bicep` script in the `src\InfrastructureAsCode\` folder to deploy resources out.
+1. Import the data from **Resorts.txt** into a container named `contoso-suites`.
+2. Import the data from **Hotels.txt** into a container named `contoso-suites`.
+3. Import the data from **FAQ.txt** into a container named `contoso-suites`.
+4. Create a `contoso-suites-faq` index in Azure AI Search, built on the three files in the `contoso-suites` container in your storage account. You should embed with `text-embedding-002-ada` and support Hybrid (Vector + Keyword) search.
+5. Update the front-end code to enable chat operations against the FAQ index.
+   1. Create a file called `secrets.toml` in `src/ContosoSuitesDashboard/.streamlit/`. Pattern it after `secrets.template.toml` but include your Azure OpenAI and Azure AI Search details.
+   2. The Contoso Suites team has followed instructions on how to interact with an Azure OpenAI model deployment. They would like you to extend the code in `src/ContosoSuitesDashboard/pages/1_Chat_with_Data.py` to ensure any queries make use of the Azure AI Search index you have created rather than relying on the inbuilt knowledge of the default GPT-4 model.
 
 ## Success Criteria
 
-- You have deployed all necessary services.
-
-## Learning Resources
-
-- [Step-by-Step Guide: Creating an Azure Resource Group on Azure Portal](https://techcommunity.microsoft.com/t5/startups-at-microsoft/step-by-step-guide-creating-an-azure-resource-group-on-azure/ba-p/3792368)
-- [az group (Azure Resource Group)](https://learn.microsoft.com/cli/azure/group?view=azure-cli-latest)
-- [Create Bicep files by using Visual Studio Code](https://learn.microsoft.com/azure/azure-resource-manager/bicep/visual-studio-code?tabs=CLI)
+- You have created an Azure Blob Storage container and uploaded the Resorts and Hotels data files.
+- You are able to view the files in Azure Blob Storage.
+- You have executed code to generate a new Azure AI Search index.
+- Your front-end application can handle chat against the `contoso-suites-faq` index.
 
 ## Solution
 
 <details markdown="block">
-<summary>Expand this section to view the solution</summary>
+<summary>Expand this section to view the solution for importing data into storage accounts.</summary>
 
-- To create a resource group using az cli, use the command `az group create`. An example of this is: `az group create -l eastus2 -n TechExcelTest`, which will create a resource group named `TechExcelTest`  in the East US 2 region.
-- If you have Visual Studio Code installed, you can use the [Bicep extension](https://marketplace.visualstudio.com/items?itemName=ms-azuretools.vscode-bicep) to run Bicep scripts by doing the following:
-  - Open the **src\InfrastructureAsCode\DeployAzureResources.bicep** script.
-  - Use Ctrl+Shift+P (or Cmd+Shift+P on Mac) to open the Visual Studio Code prompt. Then, type `Bicep` into the search menu and choose **Bicep: Deploy Bicep Script**.
+- Make sure you use the storage account you created in exercise 1, as the storage account must be in the same region as Azure AI Search.
+- Navigate to the storage account in [the Azure portal](https://portal.azure.com).
+- Select the **Containers** option from the **Data storage** menu.
+- Create a new container using the **+ Container** option. Name the container `contoso-suites`.
+- Inside the "contoso-suites" container, select the **Upload** option and choose each text file.
+- The files do not need to be in separate folders in the blob storage container.
 
-      ![Deploy a Bicep script](../../media/Solution/0101_DeployBicepScript.png)
+</details>
 
-  - Provide a name for the deployment or accept the automatically provided name.
+<details markdown="block">
+<summary>Expand this section to view the solution for creating an Azure AI Search index programmatically.</summary>
 
-      ![Enter a deployment name](../../media/Solution/0101_DeploymentName.png)
+TODO
 
-  - Select the appropriate subscription. This subscription **must** be listed for Azure OpenAI access!
+</details>
 
-      ![Select a subscription](../../media/Solution/0101_ChooseSubscription.png)
+<details markdown="block">
+<summary>Expand this section to view the solution for updating the front-end code.</summary>
 
-  - Select the resource group that you created.
-
-      ![Choose the resource group you created in this task](../../media/Solution/0101_ChooseResourceGroup.png)
-
-  - There will not be a parameter file for this script, so it is safe to choose **None**.
-
-      ![Choose None for the parameter file](../../media/Solution/0101_ParameterFile.png)
-
-  - At this point, the deployment script will kick off. You can select the link in the **Output** window to view your deployment.
-
-      ![View the deployment in the Azure portal](../../media/Solution/0101_CheckDeployment.png)
-
-  - Once your deployment completes, you should see all of your resources in the resource group you have created. These include Cosmos DB, a storage account, and an Azure AI Search service.
+TODO
 
 </details>
