--- a/docs/01_deploy_app_resources/0101.md
+++ b/docs/01_deploy_app_resources/0101.md
@@ -1,27 +1,28 @@
 ---
-title: '1. Install client tools'
+title: '1. Deploy Bicep scripts'
 layout: default
 nav_order: 1
 parent: 'Exercise 01: Deploy application resources'
 ---
 
-# Task 01 - Install client tools (20 minutes)
+# Task 01 - Deploy Bicep scripts (20 minutes)
 
 ## Introduction
 
-There are several client tools that you will use throughout this lab. These are standard tools for teams working with AI services from both Microsoft and other companies. The first task in this exercise is to prepare a machine--whether a virtual machine or your local computer--to perform these exercises.
+There are several client tools that you will use throughout this lab. These are standard tools for teams working with AI services from both Microsoft and other companies. The first task in this exercise is to prepare a machine--whether a virtual machine or your local computer--to perform these exercises. Then, you will deploy a pair of Bicep scripts.
 
 ## Description
 
-In this task, you will ensure that you have a particular set of tools installed on your own computer.
+In this task, you will ensure that you have a particular set of tools installed on your own computer. Then, you will prepare a resource group and deploy several resources over two Bicep scripts.
 
 The key tasks are as follows:
 
 1. Ensure that you have the following software installed:
    1. [Visual Studio Code](https://code.visualstudio.com/) and the [C# Dev Kit](https://marketplace.visualstudio.com/items?itemName=ms-dotnettools.csdevkit) and [Bicep](https://marketplace.visualstudio.com/items?itemName=ms-azuretools.vscode-bicep) extensions for Visual Studio Code. Alternatively, if you have Visual Studio installed, you can use that.
-   2. The [Microsoft .NET 8.0 SDK](https://dotnet.microsoft.com/en-us/download/dotnet/8.0). Ensure that you have the latest version of the SDK, not the Runtime.
-   3. [A Git client](https://git-scm.com/download/). An alternative option is to install [GitHub Desktop](https://desktop.github.com/).
-   4. [Python 3.10 or later](https://www.python.org/downloads/). You may choose to install the [Anaconda distribution of Python](https://anaconda.com/download), though you can run all of the exercises in this lab using a standard installation of Python.
+   2. The [Microsoft .NET 8.0 SDK](https://dotnet.microsoft.com/download/dotnet/8.0). Ensure that you have the latest version of the SDK, not the Runtime.
+   3. The [Azure Command Line Interface](https://learn.microsoft.com/cli/azure/install-azure-cli).
+   4. [A Git client](https://git-scm.com/download/). An alternative option is to install [GitHub Desktop](https://desktop.github.com/).
+   5. [Python 3.10 or later](https://www.python.org/downloads/). You can run all of the exercises in this lab using a standard installation of Python and do not need the Anaconda Distribution of Python. If you do have Anaconda, make sure that you can execute Python and pip commands from the command line.
 
       {: .note }
       > Regardless of which distribution you use, make sure that you can run `python` and `pip` from your command line. If you are not sure whether you have pip installed, run `python -m ensurepip` to check.
@@ -31,15 +32,22 @@ The key tasks are as follows:
 
       {: .note }
       > A virtual environment (venv) is not absolutely necessary for this project but creating one will decrease the risk of library conflicts between this project and other Python projects you may have on your machine.
+4. Create a new resource group in your subscription. This subscription **must** have access to Azure OpenAI and you should deploy the resource group to a region that supports GPT-4.
+5. Use the `DeployAzureResources.bicep` script in the `src/InfrastructureAsCode/` folder to deploy resources out.
+6. Use the `DeployAzureResourcesAPIM.bicep` script int he `src/InfrastructureAsCode/` folder to deploy APIM out. You do **not** need to wait for this to complete, as it can take 30+ minutes to run. Continue to the next exercise while this script deploys.
 
 ## Success Criteria
 
 - You have installed all necessary tools.
 - You have cloned the GitHub repository to your local machine or virtual machine.
+- You have deployed all necessary Azure services.
 
 ## Learning Resources
 
 - Cloning a repository via the [command line](https://docs.github.com/en/github/creating-cloning-and-archiving-repositories/cloning-a-repository) or [GitHub Desktop](https://docs.github.com/en/desktop/contributing-and-collaborating-using-github-desktop/cloning-a-repository-from-github-to-github-desktop)
+- [Step-by-Step Guide: Creating an Azure Resource Group on Azure Portal](https://techcommunity.microsoft.com/t5/startups-at-microsoft/step-by-step-guide-creating-an-azure-resource-group-on-azure/ba-p/3792368)
+- [az group (Azure Resource Group)](https://learn.microsoft.com/cli/azure/group?view=azure-cli-latest)
+- [Create Bicep files by using Visual Studio Code](https://learn.microsoft.com/azure/azure-resource-manager/bicep/visual-studio-code?tabs=CLI)
 
 ## Solution
 
@@ -58,6 +66,35 @@ The key tasks are as follows:
       ![In Visual Studio Code, you can mouse over the terminal to view whether your virtual environment is active.](../../media/Solution/0101_VirtualEnvironment.png)
 
       {: .note }
-      > You will need to activate the virtual environment on every new terminal you use. When you are done, you can return to your standard Python environment by running `source openai/bin/deactivate` in MacOS or Linux, `source openai/Scripts/deactive` in WSL, or `openai\Scripts\deactivate.bat` in CMD or PowerShell on Windows. Alternatively, you may safely close the console or terminal without deactivation if you desire--it will not harm anything.
+      > You will need to activate the virtual environment on every new terminal you use. When you are done, you can return to your standard Python environment by running `deactivate` in any environment. Alternatively, you may safely close the console or terminal without deactivation if you desire--it will not harm anything.
+- To create a resource group using az cli, use the command `az group create`. An example of this is: `az group create -l eastus2 -n TechExcelTest`, which will create a resource group named `TechExcelTest`  in the East US 2 region.
+- If you have Visual Studio Code installed, you can use the [Bicep extension](https://marketplace.visualstudio.com/items?itemName=ms-azuretools.vscode-bicep) to run Bicep scripts by doing the following:
+  - Open the **src/InfrastructureAsCode/DeployAzureResources.bicep** script.
+  - Use Ctrl+Shift+P (or Cmd+Shift+P on Mac) to open the Visual Studio Code prompt. Then, type `Bicep` into the search menu and choose **Bicep: Deploy Bicep Script**.
+
+      ![Deploy a Bicep script](../../media/Solution/0101_DeployBicepScript.png)
+
+  - Provide a name for the deployment or accept the automatically provided name.
+
+      ![Enter a deployment name](../../media/Solution/0101_DeploymentName.png)
+
+  - Select the appropriate subscription. This subscription **must** be listed for Azure OpenAI access!
+
+      ![Select a subscription](../../media/Solution/0101_ChooseSubscription.png)
+
+  - Select the resource group that you created.
+
+      ![Choose the resource group you created in this task](../../media/Solution/0101_ChooseResourceGroup.png)
+
+  - There will not be a parameter file for this script, so it is safe to choose **None**.
+
+      ![Choose None for the parameter file](../../media/Solution/0101_ParameterFile.png)
+
+  - At this point, the deployment script will kick off. You can select the link in the **Output** window to view your deployment.
+
+      ![View the deployment in the Azure portal](../../media/Solution/0101_CheckDeployment.png)
+
+  - Once your deployment completes, you should see all of your resources in the resource group you have created. These include Cosmos DB, a storage account, an Azure AI Search service, an Azure OpenAI workspace, and an Azure AI Services Speech service.
+  - Repeat the steps for the **src/InfrastructureAsCode/DeployAzureResourcesAPIM.bicep** script. You do **not** need to wait for this to complete, as it can take 30+ minutes to run. Continue to the next exercise while this script deploys.
 
 </details>
