--- a/docs/01_deploy_app_resources/0103.md
+++ b/docs/01_deploy_app_resources/0103.md
@@ -1,11 +1,11 @@
 ---
-title: '3. Create and configure the Azure OpenAI Service'
+title: '3. Deploy to Azure App Services'
 layout: default
 nav_order: 3
 parent: 'Exercise 01: Deploy application resources'
 ---
 
-# Task 03 - Create and configure the Azure OpenAI Service (20 minutes)
+# Task 03 - Deploy to Azure App Services (20 minutes)
 
 ## Introduction
 
