Add updates to exercise 1

--- a/docs/01_deploy_app_resources/0101.md
+++ b/docs/01_deploy_app_resources/0101.md
@@ -94,7 +94,7 @@ The key tasks are as follows:
 
       ![View the deployment in the Azure portal](../../media/Solution/0101_CheckDeployment.png)
 
-  - Once your deployment completes, you should see all of your resources in the resource group you have created. These include Cosmos DB, a storage account, an Azure AI Search service, an Azure OpenAI workspace, and an Azure AI Services Speech service.
-  - Repeat the steps for the **src/InfrastructureAsCode/DeployAzureResourcesAPIM.bicep** script. You do **not** need to wait for this to complete, as it can take 30+ minutes to run. Continue to the next exercise while this script deploys.
+  - Once your deployment completes, you should see all of your resources in the resource group you have created. These include, in order of name: an App Service (for API), a Cosmos DB account, an Application Insights instance, an App Service plan, a Log Analytics workspace, an App Service (for dashboard), an Azure OpenAI workspace, a Search service, a Speech service, a container registry, and a storage account.
+  - Repeat the last set of steps to deploy the **src/InfrastructureAsCode/DeployAzureResourcesAPIM.bicep** script. You do **not** need to wait for this to complete, as it can take 30+ minutes to run. Continue to the next exercise while this script deploys.
 
 </details>
