--- a/docs/01_deploy_app_resources/0102.md
+++ b/docs/01_deploy_app_resources/0102.md
@@ -20,10 +20,15 @@ The key tasks are as follows:
 1. Import the data from **Resorts.txt** into a container named `contoso-suites`.
 2. Import the data from **Hotels.txt** into a container named `contoso-suites`.
 3. Import the data from **FAQ.txt** into a container named `contoso-suites`.
-4. Create a `contoso-suites-faq` index in Azure AI Search, built on the three files in the `contoso-suites` container in your storage account. You should embed with `text-embedding-002-ada` and support Hybrid (Vector + Keyword) search.
-5. Update the front-end code to enable chat operations against the FAQ index.
+4. Create a `contoso-suites-faq` index in Azure AI Search, built on the three files in the `contoso-suites` container in your storage account. You should embed with `text-embedding-002-ada` and support Hybrid (Vector + Keyword) search. The Contoso Suites team would like a script that performs this action rather than operating through a UI, as they plan to do this on a regular basis.
+5. Update the front-end code in `src/ContosoSuitesDashboard/` to enable chat operations against the FAQ index.
    1. Create a file called `secrets.toml` in `src/ContosoSuitesDashboard/.streamlit/`. Pattern it after `secrets.template.toml` but include your Azure OpenAI and Azure AI Search details.
-   2. The Contoso Suites team has followed instructions on how to interact with an Azure OpenAI model deployment. They would like you to extend the code in `src/ContosoSuitesDashboard/pages/1_Chat_with_Data.py` to ensure any queries make use of the Azure AI Search index you have created rather than relying on the inbuilt knowledge of the default GPT-4 model.
+   2. The Contoso Suites team has followed instructions online on how to interact with an Azure OpenAI model deployment. They would like you to extend the code in `src/ContosoSuitesDashboard/pages/1_Chat_with_Data.py` to ensure any queries make use of the Azure AI Search index you have created rather than relying on the inbuilt knowledge of the default GPT-4 model.
+   3. You can test your work by running the following queries. The first two queries should respond with relevant information. The final two queries should not give you a valid response because they ask for information outside the scope of our data.
+      1. Which hotels on the island of Curacao have EV stations?
+      2. Do I need to pay extra money to use an EV station when I am a guest of the hotel?
+      3. How tall is the highest mountain peak in the Alps?
+      4. What is the current political situation in Thailand?
 
 ## Success Criteria
 
@@ -49,13 +54,102 @@ The key tasks are as follows:
 <details markdown="block">
 <summary>Expand this section to view the solution for creating an Azure AI Search index programmatically.</summary>
 
-TODO
+TODO!
+
+- Open up a terminal and ensure that you are currently logged in using `az login`.
+- Ensure that you can find your Azure AI Search service using the command `az search service list --resource-group {YOUR RESOURCE GROUP NAME}`. You should see one result.
+
+(error hint: if you receive a message about data source connection failing, make sure your search service system identity has Storage Blob Data Reader permissions on the storage account)
+(Create via UI instead? Not sure what to do for programmatic access! << Could ask Daniel or Chris T. >>)
 
 </details>
 
 <details markdown="block">
 <summary>Expand this section to view the solution for updating the front-end code.</summary>
 
-TODO
+- Create a file called `secrets.toml` in `src/ContosoSuitesDashboard/.streamlit/`. Copy the contents of `secrets.template.toml` as a starting point. Then, fill in the details from your Azure OpenAI and Azure AI Search services.
+  - In the [Azure portal](https://portal.azure.com), find the resource group you created.
+  - Navigate to the Azure OpenAI service in your resource group.
+  - In the **Resource Management** menu, select the **Keys and Endpoint** entry. Copy the value of **KEY 1** and save it as `key` in the `[aoai]` section of your secrets file. Copy the value of **Endpoint** and save it as `endpoint`.
+  - Return to the resource group and then select your Azure AI Search service.
+  - Copy the value of **Url** from the **Essentials** panel and save it as `endpoint` in the `[search]` section of your secrets file.
 
-</details>
+    ![Select the Azure AI Search service URL and save it to the Secrets file.](../../media/Solution/0102_SearchEndpoint.png)
+
+  - In the **Settings** menu, select the **Keys** entry. Copy the value of **Primary admin key** and save it as `key` in the `[search]` section of your secrets file.
+- Open the file `src/ContosoSuitesDashboard/pages/1_Chat_with_Data.py`. The code will run as-is, but will not have knowledge of your search index. To support chat with data, make the following changes to the Python script.
+  - Change the `handle_chat_prompt()` function to accept the following signature:
+
+    ```python
+    def handle_chat_prompt(prompt, aoai_deployment_name, aoai_endpoint, aoai_key, search_endpoint, search_key, search_index_name):
+    ```
+
+  - Add the search secrets to the `main()` function, below the Azure OpenAI secrets and above the for loop to display message history.
+
+    ```python
+    search_endpoint = st.secrets["search"]["endpoint"]
+    search_key = st.secrets["search"]["key"]
+    search_index_name = st.secrets["search"]["index_name"]
+    ```
+
+  - Change the call to `handle_chat_prompt()` in the `main()` function to include the new search parameters.
+
+    ```python
+    handle_chat_prompt(prompt, aoai_deployment_name, aoai_endpoint, aoai_key, search_endpoint, search_key, search_index_name)
+    ```
+
+  - Change the `create_chat_completion()` function to accept the following signature:
+
+    ```python
+    def create_chat_completion(aoai_deployment_name, messages, aoai_endpoint, aoai_key, search_endpoint, search_key, search_index_name):
+    ```
+
+  - Replace the `return` statement's chat completion request with one that includes an Azure AI Search data source.
+
+    ```python
+    return client.chat.completions.create(
+        model=aoai_deployment_name,
+        messages=[
+            {"role": m["role"], "content": m["content"]}
+            for m in messages
+        ],
+        stream=True,
+        extra_body={
+            "data_sources": [
+                {
+                    "type": "azure_search",
+                    "parameters": {
+                        "endpoint": search_endpoint,
+                        "index_name": search_index_name,
+                        "authentication": {
+                            "type": "api_key",
+                            "key": search_key
+                        }
+                    }
+                }
+            ]
+        }
+    )
+    ```
+
+  - Inside the `handle_chat_prompt()` function, replace the `for` loop with the following code:
+
+    ```python
+    for response in create_chat_completion(aoai_deployment_name, st.session_state.messages, aoai_endpoint, aoai_key, search_endpoint, search_key, search_index_name):
+    ```
+
+- In order to test your code, navigate to the `src/ContosoSuitesDashboard/` folder in your terminal. Then, run the following command to begin the Streamlit dashboard.
+
+    ```python
+    python -m streamlit run Index.py
+    ```
+
+- Navigate to the **Chat with Data** page and then ask each of the following questions in turn. In addition, your answers should be fairly similar to the summarized answers below.
+  - Which hotels on the island of Curacao have EV stations?
+    - Answer: Seaside Luxury Resort in Curacao Willemstad and The Executive Suites in Curacao Westpunt
+  - Do I need to pay extra money to use an EV station when I am a guest of the hotel?
+    - Answer: Usage fee will vary by location
+  - How tall is the highest mountain peak in the Alps?
+    - Answer: The requested information is not available in the retrieved data. Please try another query or topic.
+  - What is the current political situation in Thailand?
+    - Answer: The requested information is not available in the retrieved data. Please try another query or topic.
