--- a/docs/01_deploy_app_resources/0101.md
+++ b/docs/01_deploy_app_resources/0101.md
@@ -27,14 +27,15 @@ The key tasks are as follows:
       {: .note }
       > Regardless of which distribution you use, make sure that you can run `python` and `pip` from your command line. If you are not sure whether you have pip installed, run `python -m ensurepip` to check.
 
-2. Clone [this GitHub repository](https://github.com/microsoft/TechExcel-Integrating-Azure-PaaS-and-AI-Services-for-AI-Design-Wins) to your local machine.
-3. Create a new virtual environment in the root directory of your cloned repository.
+2. Fork [this GitHub repository](https://github.com/microsoft/TechExcel-Integrating-Azure-PaaS-and-AI-Services-for-AI-Design-Wins) to your account. You will need to fork the repo in order to modify and use GitHub Actions workflows in later tasks.
+3. Clone your copy of the repository to your local machine.
+4. Create a new virtual environment in the root directory of your cloned repository.
 
       {: .note }
       > A virtual environment (venv) is not absolutely necessary for this project but creating one will decrease the risk of library conflicts between this project and other Python projects you may have on your machine.
-4. Create a new resource group in your subscription. This subscription **must** have access to Azure OpenAI and you should deploy the resource group to a region that supports GPT-4.
-5. Use the `DeployAzureResources.bicep` script in the `src/InfrastructureAsCode/` folder to deploy resources out.
-6. Use the `DeployAzureResourcesAPIM.bicep` script int he `src/InfrastructureAsCode/` folder to deploy APIM out. You do **not** need to wait for this to complete, as it can take 30+ minutes to run. Continue to the next exercise while this script deploys.
+5. Create a new resource group in your subscription. This subscription **must** have access to Azure OpenAI and you should deploy the resource group to a region that supports GPT-4.
+6. Use the `DeployAzureResources.bicep` script in the `src/InfrastructureAsCode/` folder to deploy resources out.
+7. Use the `DeployAzureResourcesAPIM.bicep` script int he `src/InfrastructureAsCode/` folder to deploy APIM out. You do **not** need to wait for this to complete, as it can take 30+ minutes to run. Continue to the next exercise while this script deploys.
 
 ## Success Criteria
 
