--- a/docs/01_deploy_app_resources/0102.md
+++ b/docs/01_deploy_app_resources/0102.md
@@ -77,6 +77,10 @@ TODO!
     ![Select the Azure AI Search service URL and save it to the Secrets file.](../../media/Solution/0102_SearchEndpoint.png)
 
   - In the **Settings** menu, select the **Keys** entry. Copy the value of **Primary admin key** and save it as `key` in the `[search]` section of your secrets file.
+  - Return to the resource group and then select your Azure AI Search service.
+  - Copy the value of **Url** from the **Essentials** panel and save it as `endpoint` in the `[search]` section of your secrets file.
+  - Return to the resource group and select your Azure AI Services Speech service.
+  - In the **Resource Management** menu, select the **Keys and Endpoint** entry. Copy the value of **KEY 1** and save it as `key` in the `[speech]` section of your secrets file. Copy the value of **Location/Region** and save it as `region`.
 - Open the file `src/ContosoSuitesDashboard/pages/1_Chat_with_Data.py`. The code will run as-is, but will not have knowledge of your search index. To support chat with data, make the following changes to the Python script.
   - Change the `handle_chat_prompt()` function to accept the following signature:
 
