--- a/docs/01_deploy_app_resources/0103.md
+++ b/docs/01_deploy_app_resources/0103.md
@@ -9,59 +9,53 @@ parent: 'Exercise 01: Deploy application resources'
 
 ## Introduction
 
-The hero service for this training is the Azure OpenAI Service, which we will use throughout these exercises along with Azure AI Services. The staff at Contoso Suites has heard of OpenAI and are interested in seeing what it takes to get started with the service.
+Running the API and dashboard locally are a good proof of concept, but the Contoso Suites team makes heavy use of Azure Application Services and would like to ensure that what you build locally will integrate well into their workflow. The Contoso Suites team uses GitHub for source control and GitHub Actions workflows for code deployment, and would like to ensure that this solution will not be overly disruptive of their current CI/CD process.
 
 ## Description
 
-In this task, you will create an Azure OpenAI Service resource and two model deployments.
-
-{: .note }
-> You will work with the GPT-4 model in this training. This will limit the number of regions you can use for deployment. Review the [region availability table](https://learn.microsoft.com/azure/ai-services/openai/concepts/models#model-summary-table-and-region-availability) and ensure that you choose a region that supports GPT-4. Also, you will want to ensure that your region has [support for Azure AI Services](https://azure.microsoft.com/en-us/explore/global-infrastructure/products-by-region/?products=cognitive-services)
+In this task, you will deploy the Contoso Suites API and dashboard to Azure Application Services. The Contoso Suites development team has provided you with Dockerfiles to containerize each application, as well as GitHub Actions workflows you will be able to use in your own repository.
 
 The key tasks are as follows:
 
-1. Create an instance of the Azure OpenAI Service.
-2. In the [OpenAI Studio](https://oai.azure.com), create two new deployments:
-   1. A `gpt-4` deployment using the latest available model and a rate limit of 10K tokens per minute.
-   2. A `text-embedding-ada-002` deployment using the latest available model and a rate limit of 120,000 tokens per minute.
+1. Copy the two workflows in `/src/.github/workflows/` into `.github/workflows`, and remove the `jekyll-gh-pages.yml` workflow.
+2. Modify the `api.yml` and `dashboard.yml` workflow files in `.github/workflows`. Replace `{your_registry_name}` with the name of your Azure container registry and `{your_prefix}` with the unique identifier used to create your Azure resources.
+3. Create a new service principal named `TechExcelAzurePaaS` using the following command in the az CLI, being sure to replace `{YOUR SUBSCRIPTION ID}` and `{YOUR RESOURCE GROUP}` with the appropriate values:
+
+    ```cmd
+    az ad sp create-for-rbac --name "TechExcelAzurePaaS" --json-auth --role contributor --scopes /subscriptions/{YOUR SUBSCRIPTION ID}/resourceGroups/{YOUR RESOURCE GROUP}
+    ```
+
+4. Create the following GitHub Actions secrets:
+   1. `STREAMLIT_SECRETS` -- Paste in the entirety of your `secrets.toml` file.
+   2. `ACR_LOGIN_SERVER` -- Retrieve from your container registry's **Access keys** menu.
+   3. `ACR_USERNAME` -- Retrieve from your container registry's **Access keys** menu.
+   4. `ACR_PASSWORD` -- Retrieve from your container registry's **Access keys** menu.
+   5. `AZURE_CREDENTIALS` -- Paste in the entirety of the JSON output from running `az ad sp create-for-rbac`.
+5. Commit and push your repository changes.
+6. Manually execute the GitHub Actions workflows named **API Deployment** and **Dashboard Deployment**.
+7. TODO: any configuration for API?
+8. Connect to your dashboard website and ensure that you can still perform chat with data operations. To test, you can use a question like, "Do I need to pay extra money to use an EV station when I am a guest of the hotel?"
 
 ## Success Criteria
 
-- You have created an Azure OpenAI service instance in a valid region and have created two model deployments.
+- You have deployed your API and dashboard as Azure Application Services and are able to access the dashboard remotely.
 
 ## Learning Resources
 
-- [Azure OpenAI Service models - region availability](https://learn.microsoft.com/azure/ai-services/openai/concepts/models#model-summary-table-and-region-availability)
-- [Create and deploy an Azure OpenAI Service resource](https://learn.microsoft.com/azure/ai-services/openai/how-to/create-resource?pivots=web-portal)
-- [Working with Azure OpenAI models](https://learn.microsoft.com/azure/ai-services/openai/how-to/working-with-models)
+- [Introduction to GitHub Actions](https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/introduction-to-github-actions)
+- [.NET Core Action to build and test](https://github.com/actions/starter-workflows/blob/dacfd0a22a5a696b74a41f0b49c98ff41ef88427/ci/dotnet-core.yml)
+- [GitHub Actions for Azure](https://github.com/Azure/actions)
+- [Environment variables](https://docs.github.com/en/free-pro-team@latest/actions/reference/workflow-syntax-for-github-actions#env)
+- [Introduction to GitHub Actions](https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/introduction-to-github-actions)
+- [Authenticate with an Azure container registry](https://docs.microsoft.com/azure/container-registry/container-registry-authentication#admin-account)
+- [GitHub Actions for Azure](https://github.com/Azure/actions)
+- [Deploy a custom container to App Service using GitHub Actions](https://docs.microsoft.com/azure/app-service/deploy-container-github-action?tabs=service-principal#tabpanel_CeZOj-G++Q-3_service-principal)
 
 ## Solution
 
 <details markdown="block">
 <summary>Expand this section to view the solution</summary>
 
-- To create an instance of the Azure OpenAI Service, perform the following steps:
-  - Navigate to [the Azure portal](https://portal.azure.com) and enter `Azure OpenAI` into the search box. Then, select the **Azure OpenAI** service link.
-
-      ![Select the Azure OpenAI service](../../media/Solution/0103_OpenAI.png)
-
-  - Select  **+ Create** to create a new instance of the service.
-  - Choose the resource group you selected in Task 1 of this exercise. Make sure to create your resource in a region that supports GPT-4, such as East US 2. Provide a unique name and select **Standard S0** as the pricing tier. Then, choose **Next**.
-
-      ![Fill in the details to create an OpenAI service instance](../../media/Solution/0103_OpenAI2.png)
-
-  - Select **Next** for each of the following steps and **Create** on the final step to create the OpenAI resource.
-- To create Azure OpenAI deployments, perform the following steps:
-  - Navigate to the [OpenAI Studio](https://oai.azure.com).
-  - Select the appropriate directory, subscription,and resource.
-  - Navigate to the **Deployments** option in the **Management** menu.
-
-      ![Navigate to the Deployments menu option](../../media/Solution/0103_Deployments.png)
-
-  - Select **+ Create new deployment** to create a deployment. Select **gpt-4** for the model and the latest version (e.g., **0125-Preview**). Provide it a deployment name like `gpt-4`. In the **Advanced options** menu, set the Tokens per Minute Rate Limit (thousands) to **10**. Then select **Create** to create the deployment.
-
-      ![Create a new deployment](../../media/Solution/0103_NewDeployment.png)
-
-  - Perform the same steps to create a **text-embedding-ada-002** model deployment but ensure that it has a rate limit of 120,000 tokens.
+TODO
 
 </details>
