--- a/docs/01_deploy_app_resources/0102.md
+++ b/docs/01_deploy_app_resources/0102.md
@@ -20,7 +20,7 @@ The key tasks are as follows:
 1. Import the data from **Resorts.txt** into a container named `contoso-suites`.
 2. Import the data from **Hotels.txt** into a container named `contoso-suites`.
 3. Import the data from **FAQ.txt** into a container named `contoso-suites`.
-4. Create a `contoso-suites-faq` index in Azure AI Search, built on the three files in the `contoso-suites` container in your storage account. You should embed with `text-embedding-002-ada` and support Hybrid (Vector + Keyword) search. The Contoso Suites team would like a script that performs this action rather than operating through a UI, as they plan to do this on a regular basis.
+4. Create a `contoso-suites-faq` index in Azure AI Search, built on the three files in the `contoso-suites` container in your storage account. You should embed with `text-embedding-002-ada` and support Hybrid (Vector + Keyword) search.
 5. Update the front-end code in `src/ContosoSuitesDashboard/` to enable chat operations against the FAQ index.
    1. Create a file called `secrets.toml` in `src/ContosoSuitesDashboard/.streamlit/`. Pattern it after `secrets.template.toml` but include your Azure OpenAI and Azure AI Search details.
    2. The Contoso Suites team has followed instructions online on how to interact with an Azure OpenAI model deployment. They would like you to extend the code in `src/ContosoSuitesDashboard/pages/1_Chat_with_Data.py` to ensure any queries make use of the Azure AI Search index you have created rather than relying on the inbuilt knowledge of the default GPT-4 model.
@@ -52,15 +52,44 @@ The key tasks are as follows:
 </details>
 
 <details markdown="block">
-<summary>Expand this section to view the solution for creating an Azure AI Search index programmatically.</summary>
+<summary>Expand this section to view the solution for creating an Azure AI Search index.</summary>
 
-TODO!
+- In [the Azure portal](https://portal.azure.com), navigate to the resource group you have created and select the **Search service** in the resource group.
+- In the **Settings** menu, select the **Identity** entry and make sure you are on the **System assigned** tab. Ensure that you have a system-assigned managed identity enabled.
 
-- Open up a terminal and ensure that you are currently logged in using `az login`.
-- Ensure that you can find your Azure AI Search service using the command `az search service list --resource-group {YOUR RESOURCE GROUP NAME}`. You should see one result.
+    ![Enable the Search service's system-assigned managed identity.](../../media/Solution/0102_SearchManagedIdentity.png)
 
-(error hint: if you receive a message about data source connection failing, make sure your search service system identity has Storage Blob Data Reader permissions on the storage account)
-(Create via UI instead? Not sure what to do for programmatic access! << Could ask Daniel or Chris T. >>)
+- Navigate to the **Storage account** in your resource group.
+- Select **Access Control (IAM)** in the menu. Then, add a role assignment from the **+ Add** menu. Grant the search service system-assigned managed identity **Storage Blob Data Reader** for this storage account.
+
+    ![Grant Storage Blob Data Reader to the Search service's system identity.](../../media/Solution/0102_AccessControl.png)
+
+- Return to the Search service. Then, select the **Import and vectorize data** menu option.
+
+    ![Select the Import and vectorize data menu option.](../../media/Solution/0102_ImportVectorizeData.png)
+
+- Select **Azure Blob Storage** as the data connection type.
+- In the **Configure your Azure Blob Storage** form, select your subscription, the storage account for this training, and the `contoso-suites` blob container. Then select **Next**.
+
+    ![Configure your Azure Blob Storage account.](../../media/Solution/0102_ConfigureBlobStorage.png)
+
+- In the **Vectorize your test** form, ensure that the kind of service is **Azure OpenAI** and choose the Azure OpenAI service associated with your resource group. After that, pick **text-embedding-ada-002** as the model deployment. Keep the authentication type as **API key**. Check the box acknowledging that connecting to an Azure OpenAI service will incur additional costs and then select **Next** to continue.
+
+    ![Select your Azure OpenAI service and the text-embedding-ada-002 model deployment.](../../media/Solution/0102_VectorizeText.png)
+
+- On the **Vectorize and enrich your images** page, select **Next** without checking any boxes.
+- On the **Advanced settings** page, select **Next** without changing any settings.
+- On the **Review and create** page, enter `contoso-suites-faq` as your object names prefix and then select **Create**.
+
+    ![Add contoso-suites-faq as the object name prefix and create the index.](../../media/Solution/0102_ReviewAndCreate.png)
+
+- You can navigate to the **Indexers** page in **Search management**. Within a minute or two, you should see a **Success** status and three documents succeeded.
+
+    ![The Indexers menu option shows that index preparation was successful.](../../media/Solution/0102_Indexers.png)
+
+- Then, navigate to the **Indexes** menu option. It may take several minutes for the index to populate, but you should eventually see results.
+
+    ![The Indexes menu option shows a set of documents.](../../media/Solution/0102_Indexes.png)
 
 </details>
 
