Fixing errors and typos

--- a/docs/02_implement_vector_search_in_cosmos_db_nosql/0201.md
+++ b/docs/02_implement_vector_search_in_cosmos_db_nosql/0201.md
@@ -1,8 +1,8 @@
 ---
-title: '1. Configure vector search in Azure Cosmos DB NoSQL'
+title: '1. Configure vector search in Azure Cosmos DB for NoSQL'
 layout: default
 nav_order: 1
-parent: 'Exercise 02: Implement contextual grounding using vector search in Azure Cosmos DB NoSQL'
+parent: 'Exercise 02: Implement contextual grounding using vector search in Azure Cosmos DB for NoSQL'
 ---
 
 # Task 01 - Configure vector search in Azure Cosmos DB NoSQL (15 minutes)
@@ -11,7 +11,7 @@ parent: 'Exercise 02: Implement contextual grounding using vector search in Azur
 
 Vector search is a technique that allows items to be found based on their data characteristics instead of exact matches on a specific property field. Instead of requiring exact matches, vector search enables you to find items based on their vector representations. This technique is advantageous when performing similarity searches and is particularly valuable in applications that need to search for information within large blocks of text, such as Consoso Suites' applications.
 
-The Azure Cosmos DB for NoSQL API includes a vector search feature that provides a robust method for managing and querying high-dimensional vectors. This capability is essential for AI-driven applications requiring an integrated vector search capability. It allows you to store vectors alongside traditional schema-free data within your documents, streamlining data management and significantly enhancing the efficiency of vector operations. Keeping all relevant data in a single logical unit simplifies your data architecture, making it easy to understand and manage, making it easy to understand and manage.
+The Azure Cosmos DB for NoSQL API includes a vector search feature that provides a robust method for managing and querying high-dimensional vectors. This capability is essential for AI-driven applications requiring an integrated vector search capability. It allows you to store vectors alongside traditional schema-free data within your documents, streamlining data management and significantly enhancing the efficiency of vector operations. Keeping all relevant data in a single logical unit simplifies your data architecture, making it easy to understand and manage.
 
 ## Description
 
